assets/css/style.css
/* ... */
.header .logo {
  /* Removed margin-inline-end: auto to allow flex gap distribution */
}

/* Navbar and Desktop Search Mobile (Hidden) */
.navbar, .desktop-search {
  display: none;
}

.search-btn,
.menu-btn {
  padding: 12px;
}

.search-btn {
  background-color: var(--banner-background);
  border-radius: var(--radius-8);
}

.search-btn img {
  opacity: 0.5;
  transition: var(--transition-short);
}

.search-btn:is(:hover, :focus-visible) img {
  opacity: 1;
}

.menu-btn.active .menu,
.menu-btn .close {
  display: none;
}

.menu-btn .menu,
.menu-btn.active .close {
  display: block;
}

.search-box {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--background);
  padding: 24px 16px;
  align-items: center;
  gap: 8px;
  z-index: 1;
  display: none;
}

.search-box.active {
  display: flex;
}

.search-wrapper {
  position: relative;
  flex-grow: 1;
}

.search-field {
  background-color: var(--banner-background);
  height: 48px;
  line-height: 48px;
  padding-inline: 44px 16px;
  outline: none;
  border-radius: var(--radius-8);
  transition: var(--transition-short);
}

.search-field::placeholder {
  color: var(--on-surface-variant);
}

.search-field:hover {
  box-shadow: 0 0 0 2px var(--on-surface-variant);
}

.search-field:focus {
  box-shadow: 0 0 0 2px var(--on-surface);
  padding-inline-start: 16px;
}

.search-wrapper .leading-icon {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 12px;
  opacity: 0.5;
  transition: var(--transition-short);
}

.search-wrapper:focus-within .leading-icon {
  opacity: 0;
}

/*-----------------------------------*\
  #SIDEBAR
\*-----------------------------------*/

.sidebar {
  position: absolute;
  background-color: var(--background);
  top: 96px;
  bottom: 0;
  left: -340px;
  max-width: 340px;
  width: 100%;
  border-block-start: 1px solid var(--banner-background);
  overflow-y: overlay;
  z-index: 4;
  visibility: hidden;
  transition: var(--transition-long);
}

.sidebar.active {
  transform: translateX(340px);
  visibility: visible;
}

.sidebar-inner {
  display: grid;
  gap: 20px;
  padding-block: 36px;
}

.sidebar::-webkit-scrollbar-thumb {
  background-color: transparent;
}

.sidebar:is(:hover, :focus-within)::-webkit-scrollbar-thumb {
  background-color: var(--banner-background);
}

.sidebar::-webkit-scrollbar-button {
  height: 16px;
}

.sidebar-list,
.sidebar-footer {
  padding-inline: 36px;
}

.sidebar-link {
  color: var(--on-surface-variant);
  transition: var(--transition-short);
}

.sidebar-link:is(:hover, :focus-visible) {
  color: var(--on-background);
}

.sidebar-list {
  display: grid;
  gap: 8px;
}

.sidebar-list .title {
  margin-block-end: 8px;
}

.sidebar-footer {
  border-block-start: 1px solid var(--banner-background);
  padding-block-start: 28px;
  margin-block-start: 16px;
}

.copyright {
  color: var(--on-surface-variant);
  margin-block-end: 20px;
}

.copyright a {
  display: inline-block;
}

.overlay {
  position: fixed;
  top: 96px;
  left: 0;
  bottom: 0;
  width: 100%;
  background: var(--background);
  opacity: 0;
  pointer-events: none;
  transition: var(--transition-short);
  z-index: 3;
}

.overlay.active {
  opacity: 0.5;
  pointer-events: all;
}

/* Login Button */

.btn-login {
  font-size: var(--fs-button);
  font-weight: var(--weight-bold);
  display: flex;
  justify-content: center;
  align-items: center;
  height: 48px;
  padding: 10px 20px;
  background-color: var(--primary);
  border-radius: var(--radius-8);
  transition: var(--transition-short);
}

/*-----------------------------------*\
  #HOME PAGE
\*-----------------------------------*/

.container {
  position: relative;
  background-color: var(--surface);
  color: var(--on-surface);
  padding: 24px 20px 48px;
  height: calc(100vh - 96px);
  overflow-y: overlay;
  z-index: 1;
}

/* Banner */

.banner {
  position: relative;
  height: 700px;
  border-radius: var(--radius-24);
  overflow: hidden;
}

.banner-slider .slider-item {
  position: absolute;
  top: 0;
  left: 120%;
  width: 100%;
  height: 100%;
  background-color: var(--banner-background);
  opacity: 0;
  visibility: hidden;
  transition: opacity var(--transition-long);
}

.banner-slider .slider-item::before {
  content: "";
  position: absolute;
  inset: 0;
  background-image: linear-gradient(var(--banner-overlay));
}

.banner-slider .active {
  left: 0;
  opacity: 1;
  visibility: visible;
}

.banner-content {
  position: absolute;
  left: 24px;
  right: 24px;
  bottom: 206px;
  z-index: 1;
  color: var(--text-color);
}

.banner :is(.heading, .banner-text) {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.banner .heading {
  -webkit-line-clamp: 3;
  margin-block-end: 16px;
}

.banner .genre {
  margin-block: 12px;
}

.banner-text {
  -webkit-line-clamp: 2;
  margin-block-end: 24px;
}

.banner .btn {
  background-color: var(--primary);
}

.banner .btn:is(:hover, :focus-visible) {
  box-shadow: var(--shadow-2);
}

.slider-control {
  position: absolute;
  bottom: 20px;
  left: 20px;
  right: 0;
  border-radius: var(--radius-16) 0 0 var(--radius-16);
  user-select: none;
  padding: 4px 0 4px 4px;
  overflow-x: auto;
}

.slider-control::-webkit-scrollbar {
  display: none;
}

.container-inner {
  display: flex;
  gap: 12px;
}

.control-inner {
  display: flex;
  gap: 10px;
}

.control-inner::after {
  content: "";
  min-width: 12px;
}

.slider-control .slider-item {
  width: 100px;
  border-radius: var(--radius-8);
  flex-shrink: 0;
  filter: brightness(0.4);
}

.slider-control .active {
  filter: brightness(1);
  box-shadow: var(--shadow-1);
}

/* Movie List */

.movie-list {
  padding-block-start: 32px;
}

.movie-card {
  position: relative;
  min-width: 200px;
}

.movie-card .card-banner {
  width: 200px;
}

.movie-card .title {
  width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  margin-block: 8px 4px;
}
/* ... */

